--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
             <figure>
               <img src="assets/img/kediri.jpg" class="img-fluid" alt="">
               <a href="assets/img/kediri.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>
-              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20Paket%20ini%0ANama%3D%0ANo%20Tlp%2FWA%3D%0AAlmt%20Jemput%3D%0AAlmt%20Tujuan%3D%0AJumlah%20Penumpang%2FPaket%3D%0AHari%2C%20Tgl%20pemesanan%3D%0AJam%20pemberangkatan%3D%0ABarang%20Bawaan%3D%0APenerima%3D%0ANo%20Tlp%20Penerima%3D%0A" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20Paket%20ini%0ANama%3D%0ANo%20Tlp%2FWA%3D%0AAlmt%20Jemput%3D%0AAlmt%20Tujuan%3D%0AJumlah%20Penumpang%2FPaket%3D%0AHari%2C%20Tgl%20pemesanan%3D%0AJam%20pemberangkatan%3D%0ABarang%20Bawaan%3D%0APenerima%3D%0ANo%20Tlp%20Penerima%3D%0A" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
             </figure>
 
             <div class="portfolio-info">
@@ -452,7 +452,7 @@
             <figure>
               <img src="assets/img/juanda.jpg" class="img-fluid" alt="">
               <a href="assets/img/juanda.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>
-              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20Paket%20ini%0ANama%3D%0ANo%20Tlp%2FWA%3D%0AAlmt%20Jemput%3D%0AAlmt%20Tujuan%3D%0AJumlah%20Penumpang%2FPaket%3D%0AHari%2C%20Tgl%20pemesanan%3D%0AJam%20pemberangkatan%3D%0ABarang%20Bawaan%3D%0APenerima%3D%0ANo%20Tlp%20Penerima%3D%0A" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20Paket%20ini%0ANama%3D%0ANo%20Tlp%2FWA%3D%0AAlmt%20Jemput%3D%0AAlmt%20Tujuan%3D%0AJumlah%20Penumpang%2FPaket%3D%0AHari%2C%20Tgl%20pemesanan%3D%0AJam%20pemberangkatan%3D%0ABarang%20Bawaan%3D%0APenerima%3D%0ANo%20Tlp%20Penerima%3D%0A" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
             </figure>
 
             <div class="portfolio-info">
@@ -466,7 +466,7 @@
             <figure>
               <img src="assets/img/trenggalek.jpg" class="img-fluid" alt="">
               <a href="assets/img/trenggalek.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>
-              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20Paket%20ini%0ANama%3D%0ANo%20Tlp%2FWA%3D%0AAlmt%20Jemput%3D%0AAlmt%20Tujuan%3D%0AJumlah%20Penumpang%2FPaket%3D%0AHari%2C%20Tgl%20pemesanan%3D%0AJam%20pemberangkatan%3D%0ABarang%20Bawaan%3D%0APenerima%3D%0ANo%20Tlp%20Penerima%3D%0A" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20Paket%20ini%0ANama%3D%0ANo%20Tlp%2FWA%3D%0AAlmt%20Jemput%3D%0AAlmt%20Tujuan%3D%0AJumlah%20Penumpang%2FPaket%3D%0AHari%2C%20Tgl%20pemesanan%3D%0AJam%20pemberangkatan%3D%0ABarang%20Bawaan%3D%0APenerima%3D%0ANo%20Tlp%20Penerima%3D%0A" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
             </figure>
 
             <div class="portfolio-info">
@@ -482,7 +482,7 @@
             <figure>
               <img src="assets/img/madiun.jpg" class="img-fluid" alt="">
               <a href="assets/img/madiun.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>
-              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20Paket%20ini%0ANama%3D%0ANo%20Tlp%2FWA%3D%0AAlmt%20Jemput%3D%0AAlmt%20Tujuan%3D%0AJumlah%20Penumpang%2FPaket%3D%0AHari%2C%20Tgl%20pemesanan%3D%0AJam%20pemberangkatan%3D%0ABarang%20Bawaan%3D%0APenerima%3D%0ANo%20Tlp%20Penerima%3D%0A" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20Paket%20ini%0ANama%3D%0ANo%20Tlp%2FWA%3D%0AAlmt%20Jemput%3D%0AAlmt%20Tujuan%3D%0AJumlah%20Penumpang%2FPaket%3D%0AHari%2C%20Tgl%20pemesanan%3D%0AJam%20pemberangkatan%3D%0ABarang%20Bawaan%3D%0APenerima%3D%0ANo%20Tlp%20Penerima%3D%0A" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
             </figure>
 
             <div class="portfolio-info">
@@ -498,7 +498,7 @@
             <figure>
               <img src="assets/img/semarang.jpg" class="img-fluid" alt="">
               <a href="assets/img/semarang.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>
-              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20Paket%20ini%0ANama%3D%0ANo%20Tlp%2FWA%3D%0AAlmt%20Jemput%3D%0AAlmt%20Tujuan%3D%0AJumlah%20Penumpang%2FPaket%3D%0AHari%2C%20Tgl%20pemesanan%3D%0AJam%20pemberangkatan%3D%0ABarang%20Bawaan%3D%0APenerima%3D%0ANo%20Tlp%20Penerima%3D%0A" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20Paket%20ini%0ANama%3D%0ANo%20Tlp%2FWA%3D%0AAlmt%20Jemput%3D%0AAlmt%20Tujuan%3D%0AJumlah%20Penumpang%2FPaket%3D%0AHari%2C%20Tgl%20pemesanan%3D%0AJam%20pemberangkatan%3D%0ABarang%20Bawaan%3D%0APenerima%3D%0ANo%20Tlp%20Penerima%3D%0A" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
             </figure>
 
             <div class="portfolio-info">
@@ -514,7 +514,7 @@
             <figure>
               <img src="assets/img/jogja.jpg" class="img-fluid" alt="">
               <a href="assets/img/jogja.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>
-              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20Paket%20ini%0ANama%3D%0ANo%20Tlp%2FWA%3D%0AAlmt%20Jemput%3D%0AAlmt%20Tujuan%3D%0AJumlah%20Penumpang%2FPaket%3D%0AHari%2C%20Tgl%20pemesanan%3D%0AJam%20pemberangkatan%3D%0ABarang%20Bawaan%3D%0APenerima%3D%0ANo%20Tlp%20Penerima%3D%0A" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20Paket%20ini%0ANama%3D%0ANo%20Tlp%2FWA%3D%0AAlmt%20Jemput%3D%0AAlmt%20Tujuan%3D%0AJumlah%20Penumpang%2FPaket%3D%0AHari%2C%20Tgl%20pemesanan%3D%0AJam%20pemberangkatan%3D%0ABarang%20Bawaan%3D%0APenerima%3D%0ANo%20Tlp%20Penerima%3D%0A" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
             </figure>
 
             <div class="portfolio-info">
@@ -530,7 +530,7 @@
             <figure>
               <img src="assets/img/bali.jpg" class="img-fluid" alt="">
               <a href="assets/img/bali.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>
-              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20Paket%20ini%0ANama%3D%0ANo%20Tlp%2FWA%3D%0AAlmt%20Jemput%3D%0AAlmt%20Tujuan%3D%0AJumlah%20Penumpang%2FPaket%3D%0AHari%2C%20Tgl%20pemesanan%3D%0AJam%20pemberangkatan%3D%0ABarang%20Bawaan%3D%0APenerima%3D%0ANo%20Tlp%20Penerima%3D%0A" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20Paket%20ini%0ANama%3D%0ANo%20Tlp%2FWA%3D%0AAlmt%20Jemput%3D%0AAlmt%20Tujuan%3D%0AJumlah%20Penumpang%2FPaket%3D%0AHari%2C%20Tgl%20pemesanan%3D%0AJam%20pemberangkatan%3D%0ABarang%20Bawaan%3D%0APenerima%3D%0ANo%20Tlp%20Penerima%3D%0A" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
             </figure>
 
             <div class="portfolio-info">
