--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <figure>
               <img src="assets/img/avanza.png" class="img-fluid" alt="">
               <a href="assets/img/avanza.png" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>
-              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20armada%20ini%20Avanza%0Ahttps://sidanu05.github.io/TravelSK/assets/img/avanza.png%0ANama%3D%0ANo%20Tlp%2FWA%3D%0AAlmt%20Jemput%3D%0AAlmt%20Tujuan%3D%0AJumlah%20Penumpang%2FPaket%3D%0AHari%2C%20Tgl%20pemesanan%3D%0AJam%20pemberangkatan%3D%0ABarang%20Bawaan%3D%0APenerima%3D%0ANo%20Tlp%20Penerima%3D%0A" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
+              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20armada%20ini%20Avanza%0Ahttps://sidanu05.github.io/TravelSK/assets/img/avanza.png%0ACar%20Rental%20Filling%20Form%20%2B%20Guide%0AName%3D%0AContact%20no.%3D%0APick%20up%20address%3D%0ADate%20of%20use%3D%0APick%20up%20time%3D%0ADown%20Payment%3D" target="_blank"><i class="bi bi-link"></i></a>
             </figure>
 
             <div class="portfolio-info">
@@ -276,7 +276,7 @@
             <figure>
               <img src="assets/img/Innova.png" class="img-fluid" alt="">
               <a href="assets/img/Innova.png" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Web 3"><i class="bi bi-plus"></i></a>
-              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20armada%20ini%20Innova%0Ahttps://sidanu05.github.io/TravelSK/assets/img/Innova.png%0ANama%3D%0ANo%20Tlp%2FWA%3D%0AAlmt%20Jemput%3D%0AAlmt%20Tujuan%3D%0AJumlah%20Penumpang%2FPaket%3D%0AHari%2C%20Tgl%20pemesanan%3D%0AJam%20pemberangkatan%3D%0ABarang%20Bawaan%3D%0APenerima%3D%0ANo%20Tlp%20Penerima%3D%0A" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
+              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20armada%20ini%20Innova%0Ahttps://sidanu05.github.io/TravelSK/assets/img/Innova.png%0ACar%20Rental%20Filling%20Form%20%2B%20Guide%0AName%3D%0AContact%20no.%3D%0APick%20up%20address%3D%0ADate%20of%20use%3D%0APick%20up%20time%3D%0ADown%20Payment%3D" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
             </figure>
 
             <div class="portfolio-info">
@@ -294,7 +294,7 @@
             <figure>
               <img src="assets/img/Elf.png" class="img-fluid" alt="">
               <a href="assets/img/Elf.png" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 2"><i class="bi bi-plus"></i></a>
-              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20armada%20ini%20Elf%20Long%0Ahttps://sidanu05.github.io/TravelSK/assets/img/Elf.png%0ANama%3D%0ANo%20Tlp%2FWA%3D%0AAlmt%20Jemput%3D%0AAlmt%20Tujuan%3D%0AJumlah%20Penumpang%2FPaket%3D%0AHari%2C%20Tgl%20pemesanan%3D%0AJam%20pemberangkatan%3D%0ABarang%20Bawaan%3D%0APenerima%3D%0ANo%20Tlp%20Penerima%3D%0A" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
+              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20armada%20ini%20Elf%20Long%0Ahttps://sidanu05.github.io/TravelSK/assets/img/Elf.png%0ACar%20Rental%20Filling%20Form%20%2B%20Guide%0AName%3D%0AContact%20no.%3D%0APick%20up%20address%3D%0ADate%20of%20use%3D%0APick%20up%20time%3D%0ADown%20Payment%3D" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
             </figure>
 
             <div class="portfolio-info">
@@ -312,7 +312,7 @@
             <figure>
               <img src="assets/img/elfgiga.png" class="img-fluid" alt="">
               <a href="assets/img/elfgiga.png" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 2"><i class="bi bi-plus"></i></a>
-              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20armada%20ini%20Elf %20Giga%0Ahttps://sidanu05.github.io/TravelSK/assets/img/elfgiga.png%0ANama%3D%0ANo%20Tlp%2FWA%3D%0AAlmt%20Jemput%3D%0AAlmt%20Tujuan%3D%0AJumlah%20Penumpang%2FPaket%3D%0AHari%2C%20Tgl%20pemesanan%3D%0AJam%20pemberangkatan%3D%0ABarang%20Bawaan%3D%0APenerima%3D%0ANo%20Tlp%20Penerima%3D%0A" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
+              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20armada%20ini%20Elf %20Giga%0Ahttps://sidanu05.github.io/TravelSK/assets/img/elfgiga.png%0ACar%20Rental%20Filling%20Form%20%2B%20Guide%0AName%3D%0AContact%20no.%3D%0APick%20up%20address%3D%0ADate%20of%20use%3D%0APick%20up%20time%3D%0ADown%20Payment%3D" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
             </figure>
 
             <div class="portfolio-info">
@@ -330,7 +330,7 @@
             <figure>
               <img src="assets/img/hiaceCom.png" class="img-fluid" alt="">
               <a href="assets/img/hiaceCom.png" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="App 2"><i class="bi bi-plus"></i></a>
-              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20armada%20ini%20Hiace%20Commuter%0Ahttps://sidanu05.github.io/TravelSK/assets/img/hiaceCom.png%0ANama%3D%0ANo%20Tlp%2FWA%3D%0AAlmt%20Jemput%3D%0AAlmt%20Tujuan%3D%0AJumlah%20Penumpang%2FPaket%3D%0AHari%2C%20Tgl%20pemesanan%3D%0AJam%20pemberangkatan%3D%0ABarang%20Bawaan%3D%0APenerima%3D%0ANo%20Tlp%20Penerima%3D%0A" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
+              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20armada%20ini%20Hiace%20Commuter%0Ahttps://sidanu05.github.io/TravelSK/assets/img/hiaceCom.png%0ACar%20Rental%20Filling%20Form%20%2B%20Guide%0AName%3D%0AContact%20no.%3D%0APick%20up%20address%3D%0ADate%20of%20use%3D%0APick%20up%20time%3D%0ADown%20Payment%3D" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
             </figure>
             
             <div class="portfolio-info">
@@ -348,7 +348,7 @@
             <figure>
               <img src="assets/img/hiace2.png" class="img-fluid" alt="">
               <a href="assets/img/hiace2.png" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="App 2"><i class="bi bi-plus"></i></a>
-              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20armada%20ini%20Hiace%20Premio%0Ahttps://sidanu05.github.io/TravelSK/assets/img/hiace2.png%0ANama%3D%0ANo%20Tlp%2FWA%3D%0AAlmt%20Jemput%3D%0AAlmt%20Tujuan%3D%0AJumlah%20Penumpang%2FPaket%3D%0AHari%2C%20Tgl%20pemesanan%3D%0AJam%20pemberangkatan%3D%0ABarang%20Bawaan%3D%0APenerima%3D%0ANo%20Tlp%20Penerima%3D%0A" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
+              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20armada%20ini%20Hiace%20Premio%0Ahttps://sidanu05.github.io/TravelSK/assets/img/hiace2.png%0ACar%20Rental%20Filling%20Form%20%2B%20Guide%0AName%3D%0AContact%20no.%3D%0APick%20up%20address%3D%0ADate%20of%20use%3D%0APick%20up%20time%3D%0ADown%20Payment%3D" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
             </figure>
 
             <div class="portfolio-info">
