--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <figure>
               <img src="assets/img/avanza.png" class="img-fluid" alt="">
               <a href="assets/img/avanza.png" data-lightbox="portfolio" data-title="App 1" class="link-preview"><i class="bi bi-plus"></i></a>
-              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20armada%20ini%20Avanza%0Ahttps://sidanu05.github.io/TravelSK/assets/img/avanza.png%0ACar%20Rental%20Filling%20Form%20%2B%20Guide%0AName%3D%0AContact%20no.%3D%0APick%20up%20address%3D%0ADate%20of%20use%3D%0APick%20up%20time%3D%0ADown%20Payment%3D" target="_blank"><i class="bi bi-link"></i></a>
+              <a href="https://wa.me/+6282233547016?text=Saya%20tertarik%20untuk%20booking%20armada%20ini%20Avanza%0Ahttps://sidanu05.github.io/TravelSK/assets/img/avanza.png%0ACar%20Rental%20Filling%20Form%20%2B%20Guide%0AName%3D%0AContact%20no.%3D%0APick%20up%20address%3D%0ADate%20of%20use%3D%0APick%20up%20time%3D%0ADown%20Payment%3D" class="link-details" target="_blank"><i class="bi bi-link"></i></a>
             </figure>
 
             <div class="portfolio-info">
