Khadijah Rent & Travel

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
-  <title>Travel SK</title>
+  <title> Khadijah Rent & Travel</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -44,7 +44,7 @@
 
       <div class="row justify-content-center align-items-center">
         <div class="col-xl-11 d-flex align-items-center justify-content-between">
-          <h1 class="logo"><a href="index.html">TravelSK</a></h1>
+          <h1 class="logo"><a href="index.html">Khadijah Rent & Travel</a></h1>
           <!-- Uncomment below if you prefer to use an image logo -->
           <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -95,9 +95,9 @@
           <div class="carousel-item active" style="background-image: url(assets/img/foto1.jpeg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Travel Sinar Kauripan</h2>
+                <h2 class="animate__animated animate__fadeInDown"> Khadijah Rent & Travel </h2>
                 <p class="animate__animated animate__fadeInUp">
-                  "Jelajahi keindahan alam dan budaya Indonesia dengan Travel Sinar Kauripan! Kami adalah mitra perjalanan terpercaya yang menyediakan pengalaman wisata yang tak terlupakan di destinasi eksotis di seluruh Nusantara. Dengan layanan berkualitas tinggi dan paket yang disesuaikan dengan kebutuhan Anda, kami menawarkan petualangan yang memikat mulai dari wisata alam, kebudayaan, hingga petualangan aktif. Segera rencanakan liburan Anda bersama kami dan rasakan keajaiban Indonesia bersama Travel Sinar Kauripan!"
+                  "Jelajahi keindahan alam dan budaya Indonesia dengan Khadijah Rent & Travel! Kami adalah mitra perjalanan terpercaya yang menyediakan pengalaman wisata yang tak terlupakan di destinasi eksotis di seluruh Nusantara. Dengan layanan berkualitas tinggi dan paket yang disesuaikan dengan kebutuhan Anda, kami menawarkan petualangan yang memikat mulai dari wisata alam, kebudayaan, hingga petualangan aktif. Segera rencanakan liburan Anda bersama kami dan rasakan keajaiban Indonesia bersama Khadijah Rent & Travel!"
                 </p>
                 <a href="https://wa.me/+6282233547016" target="_blank" class="btn-get-started scrollto animate__animated animate__fadeInUp">Booking</a>
                 
@@ -108,9 +108,9 @@
           <div class="carousel-item" style="background-image: url(assets/img/foto2.jpeg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Travel Sinar Kauripan</h2>
+                <h2 class="animate__animated animate__fadeInDown">Khadijah Rent & Travel</h2>
                 <p class="animate__animated animate__fadeInUp">
-                  "Jelajahi keindahan alam dan budaya Indonesia dengan Travel Sinar Kauripan! Kami adalah mitra perjalanan terpercaya yang menyediakan pengalaman wisata yang tak terlupakan di destinasi eksotis di seluruh Nusantara. Dengan layanan berkualitas tinggi dan paket yang disesuaikan dengan kebutuhan Anda, kami menawarkan petualangan yang memikat mulai dari wisata alam, kebudayaan, hingga petualangan aktif. Segera rencanakan liburan Anda bersama kami dan rasakan keajaiban Indonesia bersama Travel Sinar Kauripan!"
+                  "Jelajahi keindahan alam dan budaya Indonesia dengan Khadijah Rent & Travel! Kami adalah mitra perjalanan terpercaya yang menyediakan pengalaman wisata yang tak terlupakan di destinasi eksotis di seluruh Nusantara. Dengan layanan berkualitas tinggi dan paket yang disesuaikan dengan kebutuhan Anda, kami menawarkan petualangan yang memikat mulai dari wisata alam, kebudayaan, hingga petualangan aktif. Segera rencanakan liburan Anda bersama kami dan rasakan keajaiban Indonesia bersama Khadijah Rent & Travel!"
                 </p>
                 <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
               </div>
@@ -120,9 +120,9 @@
           <div class="carousel-item" style="background-image: url(assets/img/foto3.jpeg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Travel Sinar Kauripan</h2>
+                <h2 class="animate__animated animate__fadeInDown">Khadijah Rent & Travel</h2>
                 <p class="animate__animated animate__fadeInUp">
-                  "Jelajahi keindahan alam dan budaya Indonesia dengan Travel Sinar Kauripan! Kami adalah mitra perjalanan terpercaya yang menyediakan pengalaman wisata yang tak terlupakan di destinasi eksotis di seluruh Nusantara. Dengan layanan berkualitas tinggi dan paket yang disesuaikan dengan kebutuhan Anda, kami menawarkan petualangan yang memikat mulai dari wisata alam, kebudayaan, hingga petualangan aktif. Segera rencanakan liburan Anda bersama kami dan rasakan keajaiban Indonesia bersama Travel Sinar Kauripan!"
+                  "Jelajahi keindahan alam dan budaya Indonesia dengan Khadijah Rent & Travel! Kami adalah mitra perjalanan terpercaya yang menyediakan pengalaman wisata yang tak terlupakan di destinasi eksotis di seluruh Nusantara. Dengan layanan berkualitas tinggi dan paket yang disesuaikan dengan kebutuhan Anda, kami menawarkan petualangan yang memikat mulai dari wisata alam, kebudayaan, hingga petualangan aktif. Segera rencanakan liburan Anda bersama kami dan rasakan keajaiban Indonesia bersama Khadijah Rent & Travel!"
                 </p>
                 <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
               </div>
@@ -132,9 +132,9 @@
           <div class="carousel-item" style="background-image: url(assets/img/foto4.jpeg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Travel Sinar Kauripan</h2>
+                <h2 class="animate__animated animate__fadeInDown">Khadijah Rent & Travel</h2>
                 <p class="animate__animated animate__fadeInUp">
-                  "Jelajahi keindahan alam dan budaya Indonesia dengan Travel Sinar Kauripan! Kami adalah mitra perjalanan terpercaya yang menyediakan pengalaman wisata yang tak terlupakan di destinasi eksotis di seluruh Nusantara. Dengan layanan berkualitas tinggi dan paket yang disesuaikan dengan kebutuhan Anda, kami menawarkan petualangan yang memikat mulai dari wisata alam, kebudayaan, hingga petualangan aktif. Segera rencanakan liburan Anda bersama kami dan rasakan keajaiban Indonesia bersama Travel Sinar Kauripan!"
+                  "Jelajahi keindahan alam dan budaya Indonesia dengan Khadijah Rent & Travel! Kami adalah mitra perjalanan terpercaya yang menyediakan pengalaman wisata yang tak terlupakan di destinasi eksotis di seluruh Nusantara. Dengan layanan berkualitas tinggi dan paket yang disesuaikan dengan kebutuhan Anda, kami menawarkan petualangan yang memikat mulai dari wisata alam, kebudayaan, hingga petualangan aktif. Segera rencanakan liburan Anda bersama kami dan rasakan keajaiban Indonesia bersama Khadijah Rent & Travel!"
                 </p>
                 <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
               </div>
@@ -174,9 +174,9 @@
         <header class="section-header">
           <h3>Tentang Kami</h3>
           <p>
-            Sinar Kauripan Travel merupakan penyedia layanan tour dan travel yang berbasis di Malang, Jawa Timur. Dikenal sebagai mitra terpercaya bagi para pelancong yang ingin menjelajahi keindahan Malang dan sekitarnya, perusahaan ini menawarkan beragam paket wisata yang mengungkap pesona alam, budaya, dan kuliner khas daerah tersebut.
-            Dengan armada mobil yang nyaman dan dilengkapi dengan fasilitas terkini, Sinar Kauripan Travel memastikan bahwa setiap perjalanan pelanggan berlangsung dengan lancar dan nyaman. Tim pengemudi yang berpengalaman dan ramah siap memberikan pelayanan terbaik serta informasi yang berguna sepanjang perjalanan.
-            Sinar Kauripan Travel tidak hanya menawarkan paket wisata yang sudah tersusun dengan baik, tetapi juga bersedia mengakomodasi permintaan khusus pelanggan untuk membuat pengalaman wisata menjadi lebih personal dan berkesan. Dengan komitmen untuk memberikan layanan terbaik dan pengalaman wisata yang tak terlupakan, Sinar Kauripan Travel menjadi pilihan utama bagi mereka yang ingin menjelajahi pesona Malang dan sekitarnya dengan cara yang istimewa.
+           Khadijah Rent & Travel merupakan penyedia layanan tour dan travel yang berbasis di Malang, Jawa Timur. Dikenal sebagai mitra terpercaya bagi para pelancong yang ingin menjelajahi keindahan Malang dan sekitarnya, perusahaan ini menawarkan beragam paket wisata yang mengungkap pesona alam, budaya, dan kuliner khas daerah tersebut.
+            Dengan armada mobil yang nyaman dan dilengkapi dengan fasilitas terkini, Khadijah Rent & Travel memastikan bahwa setiap perjalanan pelanggan berlangsung dengan lancar dan nyaman. Tim pengemudi yang berpengalaman dan ramah siap memberikan pelayanan terbaik serta informasi yang berguna sepanjang perjalanan.
+           Khadijah Rent & Travel tidak hanya menawarkan paket wisata yang sudah tersusun dengan baik, tetapi juga bersedia mengakomodasi permintaan khusus pelanggan untuk membuat pengalaman wisata menjadi lebih personal dan berkesan. Dengan komitmen untuk memberikan layanan terbaik dan pengalaman wisata yang tak terlupakan, Khadijah Rent & Travel menjadi pilihan utama bagi mereka yang ingin menjelajahi pesona Malang dan sekitarnya dengan cara yang istimewa.
           </p>
         </header>
       </div>
@@ -188,7 +188,7 @@
 
         <header class="section-header wow fadeInUp">
           <h3>Mengapa Memilih Kami!!</h3>
-          <p>"Kepercayaan, Kenyamanan, dan Kualitas: Sinar Kauripan, Pilihan Utama Wisatawan Bijak!"</p>
+          <p>"Kepercayaan, Kenyamanan, dan Kualitas: Khadijah Rent & Travel, Pilihan Utama Wisatawan Bijak!"</p>
         </header>
 
         <div class="row">
@@ -726,7 +726,7 @@
 
         <div class="section-header">
           <h3>Info Kontak Kami</h3>
-          <p>"Di Mana Keperluan Bertemu Kebingungan, Sinar Kauripan Siap Mengarahkan!"</p>
+          <p>"Di Mana Keperluan Bertemu Kebingungan, Khadijah Rent & Travel Siap Mengarahkan!"</p>
         </div>
 
         <div class="row contact-info">
@@ -795,8 +795,8 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <h3>TravelSK</h3>
-            <p>Sinar Kauripan Travel merupakan penyedia layanan tour dan travel yang berbasis di Malang, Jawa Timur</p>
+            <h3>Khadijah Rent & Travel</h3>
+            <p>Khadijah Rent & Travel merupakan penyedia layanan tour dan travel yang berbasis di Malang, Jawa Timur</p>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
@@ -841,7 +841,7 @@
     
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>Travel SK</strong>. All Rights Reserved
+        &copy; Copyright <strong>Khadijah Rent & Travel</strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!--
@@ -850,7 +850,7 @@
         Licensing information: https://bootstrapmade.com/license/
         Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=BizPage
       -->
-        Designed by <a href="">TravelSK</a>
+        Designed by <a href="">Khadijah Rent & Travel</a>
       </div>
     </div>
   </footer><!-- End Footer -->
