Khadijah Rent & Travel2

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     <section id="call-to-action">
       <div class="container text-center" data-aos="zoom-in">
         <h3>Masih Ragu?</h3>
-        <p> "Ayo, jangan ragu dan bingung! Segera manfaatkan layanan kami di Travel Kahuripan untuk merencanakan liburan impian Anda. Dengan berbagai paket wisata yang menarik dan pelayanan terbaik, kami siap memberikan pengalaman tak terlupakan bagi Anda dan keluarga. Jadi, jangan tunda lagi! Booking sekarang juga dan mulailah petualangan Anda bersama kami!"</p>
+        <p> "Ayo, jangan ragu dan bingung! Segera manfaatkan layanan kami di Khadijah Rent & Travel untuk merencanakan liburan impian Anda. Dengan berbagai paket wisata yang menarik dan pelayanan terbaik, kami siap memberikan pengalaman tak terlupakan bagi Anda dan keluarga. Jadi, jangan tunda lagi! Booking sekarang juga dan mulailah petualangan Anda bersama kami!"</p>
         <a class="cta-btn"href="https://wa.me/+6282233547016" target="_blank">Booking</a>
       </div>
     </section><!-- End Call To Action Section -->
