--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <p class="animate__animated animate__fadeInUp">
                   "Jelajahi keindahan alam dan budaya Indonesia dengan Khadijah Rent & Travel! Kami adalah mitra perjalanan terpercaya yang menyediakan pengalaman wisata yang tak terlupakan di destinasi eksotis di seluruh Nusantara. Dengan layanan berkualitas tinggi dan paket yang disesuaikan dengan kebutuhan Anda, kami menawarkan petualangan yang memikat mulai dari wisata alam, kebudayaan, hingga petualangan aktif. Segera rencanakan liburan Anda bersama kami dan rasakan keajaiban Indonesia bersama Khadijah Rent & Travel!"
                 </p>
-                <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
+                 <a href="https://wa.me/+6282233547016" target="_blank" class="btn-get-started scrollto animate__animated animate__fadeInUp">Booking</a>
               </div>
             </div>
           </div>
@@ -124,7 +124,7 @@
                 <p class="animate__animated animate__fadeInUp">
                   "Jelajahi keindahan alam dan budaya Indonesia dengan Khadijah Rent & Travel! Kami adalah mitra perjalanan terpercaya yang menyediakan pengalaman wisata yang tak terlupakan di destinasi eksotis di seluruh Nusantara. Dengan layanan berkualitas tinggi dan paket yang disesuaikan dengan kebutuhan Anda, kami menawarkan petualangan yang memikat mulai dari wisata alam, kebudayaan, hingga petualangan aktif. Segera rencanakan liburan Anda bersama kami dan rasakan keajaiban Indonesia bersama Khadijah Rent & Travel!"
                 </p>
-                <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
+                 <a href="https://wa.me/+6282233547016" target="_blank" class="btn-get-started scrollto animate__animated animate__fadeInUp">Booking</a>
               </div>
             </div>
           </div>
@@ -136,7 +136,7 @@
                 <p class="animate__animated animate__fadeInUp">
                   "Jelajahi keindahan alam dan budaya Indonesia dengan Khadijah Rent & Travel! Kami adalah mitra perjalanan terpercaya yang menyediakan pengalaman wisata yang tak terlupakan di destinasi eksotis di seluruh Nusantara. Dengan layanan berkualitas tinggi dan paket yang disesuaikan dengan kebutuhan Anda, kami menawarkan petualangan yang memikat mulai dari wisata alam, kebudayaan, hingga petualangan aktif. Segera rencanakan liburan Anda bersama kami dan rasakan keajaiban Indonesia bersama Khadijah Rent & Travel!"
                 </p>
-                <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
+                 <a href="https://wa.me/+6282233547016" target="_blank" class="btn-get-started scrollto animate__animated animate__fadeInUp">Booking</a>
               </div>
             </div>
           </div>
@@ -146,7 +146,7 @@
               <div class="container">
                 <h2 class="animate__animated animate__fadeInDown">Magnam aliquam quaerat</h2>
                 <p class="animate__animated animate__fadeInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
+                 <a href="https://wa.me/+6282233547016" target="_blank" class="btn-get-started scrollto animate__animated animate__fadeInUp">Booking</a>
               </div>
             </div>
           </div> -->
