--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div class="carousel-inner" role="listbox">
 
-          <div class="carousel-item active" style="background-image: url(assets/img/foto1.jpeg)">
+          <div class="carousel-item active" style="background-image: url(assets/img/BG2.jpeg)">
             <div class="carousel-container">
               <div class="container">
                 <h2 class="animate__animated animate__fadeInDown"> Khadijah Rent & Travel </h2>
